# anigraph

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: pipeline.yml
crates/model/: Cargo.toml
crates/model/src/: anime.rs  lib.rs  manga.rs  shared.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: checkpoint.rs  crossref.rs  enumerate.rs  jsonl_writer.rs  lib.rs  lock.rs  output.rs  phase.rs  progress.rs  runner.rs  stats.rs  tmdb.rs  tvdb.rs
crates/providers/: Cargo.toml
crates/providers/src/: lib.rs
crates/providers/src/anilist/: auth.rs  client.rs  collection.rs  mod.rs
schemas/: schema-anime.json  schema-manga.json
src/: main.rs
